<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ljudevit.dutyschedulerapp.AccountActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="@dimen/account_label_width"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/name"
            android:layout_width="@dimen/account_input_width"
            android:layout_height="@dimen/account_input_height"
            android:background="#00000000"
            android:ems="13"
            android:inputType="textAutoComplete" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="@dimen/account_label_width"
            android:layout_height="wrap_content"
            android:text="@string/surname" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="@dimen/account_input_width"
            android:layout_height="@dimen/account_input_height"
            android:background="#00000000"
            android:ems="13"
            android:inputType="textAutoComplete" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="@dimen/account_label_width"
            android:layout_height="wrap_content"
            android:text="@string/office" />

        <EditText
            android:id="@+id/office"
            android:layout_width="@dimen/account_input_width"
            android:layout_height="@dimen/account_input_height"
            android:background="#00000000"
            android:ems="13"
            android:inputType="textAutoComplete" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="@dimen/account_label_width"
            android:layout_height="wrap_content"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="@dimen/account_input_width"
            android:layout_height="@dimen/account_input_height"
            android:background="#00000000"
            android:ems="13"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="@dimen/account_label_width"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/email"
            android:layout_width="@dimen/account_input_width"
            android:layout_height="@dimen/account_input_height"
            android:background="#00000000"
            android:ems="13"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="@dimen/account_label_width"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="@dimen/account_input_width"
            android:layout_height="@dimen/account_input_height"
            android:background="#00000000"
            android:ems="13"
            android:inputType="textVisiblePassword" />
    </LinearLayout>

    <Button
        android:id="@+id/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/update_users_info" />

    <ListView
        android:id="@+id/users_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

</LinearLayout>
