<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.example.ljudevit.dutyschedulerapp.LogInActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_top_margin"
                android:layout_marginBottom="5dp"
                >

                <ImageView
                    android:contentDescription="@string/login_background_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/calendar_login_screen"
                    />
                <ImageButton
                    android:contentDescription="login_settings_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/settings"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:id="@+id/login_settings_button"
                    android:background="@android:color/transparent"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/groupbox"
                >

                <EditText
                    android:layout_width="@dimen/login_input_width"
                    android:layout_height="@dimen/login_input_height"
                    android:inputType="textAutoComplete"
                    android:ems="13"
                    android:gravity="center"
                    android:hint="@string/login_user_name"
                    android:background="#00000000"
                    android:id="@+id/userName"/>
            </FrameLayout>

            <FrameLayout
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/groupbox"
                android:layout_gravity="center">

                <EditText
                    android:layout_width="@dimen/login_input_width"
                    android:layout_height="@dimen/login_input_height"
                    android:inputType="textPassword"
                    android:ems="13"
                    android:id="@+id/password"
                    android:gravity="center"
                    android:background="@android:color/transparent"
                    android:hint="@string/login_password"
                    />

            </FrameLayout>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_remember_me"
                android:id="@+id/checkbox"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30dp"
                android:layout_gravity="end"/>

            <Button
                android:layout_width="200dp"
                android:textColor="#FFFFFF"
                android:layout_gravity="center"
                android:background="@drawable/loginbutton"
                android:layout_height="wrap_content"
                android:text="@string/login_button_text"
                android:id="@+id/signIn"/>
        </LinearLayout>

</ScrollView>
