<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/info">
        <TextView
            android:id="@+id/name"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageView
            android:contentDescription="@string/is_administrator"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/admin"
            android:id="@+id/is_admin"/>

    </LinearLayout>
    <LinearLayout
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/info"
        android:layout_toEndOf="@+id/info"
        android:orientation="vertical">
        <ImageButton
            android:contentDescription="@string/change_isadmin_value"
            android:layout_gravity="end"
            android:id="@+id/set_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/rankup"
            />
        <ImageButton
            android:contentDescription="@string/delete_account"
            android:layout_gravity="end"
            android:id="@+id/delete_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/trashcan"
            />

    </LinearLayout>

</RelativeLayout>